--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,5 +1,6 @@
+#gistToken=3a7986b8694cc9d7f09ac43e9515cd86aaffa3be
 gistToken=08acc9190f73db0c297ac54367f1ec141f615e18
 readPackagesToken=86c6e7dbc2dee60aec2244f14c6ace7b58c0ea6f
 basePath=https://api.github.com/gists
 userName=alex-chumakin-test
-password=PicnicTest123
+password=UGljbmljVGVzdDEyMw==
